--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./assets/css/main.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <div id="app"> <div class="page"> <div class="header"> <div class="hamburger"> <div class="content"> <span class="hamburger__icon"></span> </div> </div> </div> <div id="page1" class="page1"> <div class="page1__intro"> <h1 class="salutation">Hey,</h1> <h3 class="address">I'm Nischay</h3> <h3 class="quotation">Welcome to my portfolio</h3> </div> </div> </div> </div>
