--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <div id="app"> <div class="page"> <div class="header"> <div class="hamburger"> <div class="content"> <span class="hamburger__icon"></span> </div> </div> </div> <div id="page1" class="page1"> <div class="page1__intro"> <h1 class="salutation">Hi,</h1> <h3 class="address">I'm Bhed</h3> <h3 class="quotation">This is my portfolio</h3> </div> </div> </div> </div>
+  <div id="app"> <div class="page"> <div class="header"> <div class="hamburger"> <div class="content"> <span class="hamburger__icon"></span> </div> </div> </div> <div id="page1" class="page1"> <div class="page1__intro"> <h1 class="salutation">Hey,</h1> <h3 class="address">I'm Nischay</h3> <h3 class="quotation">Welcome to my portfolio</h3> </div> </div> </div> </div>
 
     <!-- CDN for Jquery -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
