--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="home__intro">
         <h1 class="salutation">Hey,</h1>
         <h3 class="address">I'm Nischay</h3>
-        <h3 class="quotation">Watashi no pōtoforio e yōkoso</h3>
+        <h3 class="quotation">Benvenuto nel mio portfolio</h3>
       </div>
     </div>
   </div>
