--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+  
   <!DOCTYPE html>
   <html lang="en">
   <head>
@@ -24,15 +25,15 @@
   <body>
     <div id="app">
       
-  <div class="page">
-    <div class="header">
+  <div class="header">
       <div class="hamburger">
         <div class="content">
           <span class="hamburger__icon"></span>
         </div>
       </div>
     </div>
-
+  
+  <div class="page home">
     <div id="home" class="home">
       <div class="home__intro">
         <h1 class="salutation">Hey,</h1>
@@ -41,7 +42,13 @@
       </div>
     </div>
   </div>
-  
+  <div class="page about">
+  <div class="fizz"></div>
+  <p class="scroll-down">PLEASE SCROLL DOWN</p>
+  </div><div class="projects">
+  <div class="fizz"></div>
+  <p class="scroll-down">PLEASE SCROLL DOWN</p>;
+  </div>
     </div>
     
     <!-- CDN for Jquery -->
