--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Portfolio - Nischay</title>
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   
@@ -36,18 +36,18 @@
   <div class="page home">
     <div id="home" class="home">
       <div class="home__intro">
-        <h1 class="salutation">Hey,</h1>
-        <h3 class="address">I'm Nischay</h3>
+        <h1 class="salutation">Hi,</h1>
+        <h3 class="address">I'm Nischay,</h3>
         <h3 class="quotation">Benvenuto nel mio portfolio</h3>
       </div>
     </div>
   </div>
   <div class="page about">
   <div class="fizz"></div>
-  <p class="scroll-down">PLEASE SCROLL DOWN</p>
+  <a href="#" class="scroll-down">Kindly Scroll Down</a>
   </div><div class="projects">
   <div class="fizz"></div>
-  <p class="scroll-down">PLEASE SCROLL DOWN</p>;
+  <a href="#" class="scroll-down">Kindly Scroll Down</a>;
   </div>
     </div>
     
