--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- googlefonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet"> -->
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
 
@@ -38,7 +38,7 @@
       <div class="home__intro">
         <h1 class="salutation">Hi,</h1>
         <h3 class="address">I'm Nischay,</h3>
-        <h3 class="quotation">Benvenuto nel mio portfolio</h3>
+        <h3 class="quotation">Welcome to my Portfolio</h3>
       </div>
     </div>
   </div>
